service-mesh/apps/todo/manifest/base/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        version: v1
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        args: ["--save", "", "--appendonly", "no"]
        ports:
        - name: redis
          containerPort: 6379
        startupProbe:
          exec:
            command: ["redis-cli", "ping"]
          failureThreshold: 30
          periodSeconds: 2
        readinessProbe:
          exec:
            command: ["redis-cli", "ping"]
          periodSeconds: 5
        livenessProbe:
          exec:
            command: ["redis-cli", "ping"]
          periodSeconds: 15
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
  - name: redis
    port: 6379
    targetPort: redis
  selector:
    app: redis
