service-mesh/apps/todo/manifest/base/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
        version: v1
    spec:
      containers:
      - name: user
        image: quay.io/rh_rh/ocp-todo-user:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        startupProbe:
          httpGet:
            path: /health
            port: http
          failureThreshold: 30
          periodSeconds: 2
        readinessProbe:
          httpGet:
            path: /health
            port: http
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: http
          periodSeconds: 15
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app: user
