service-mesh/apps/todo/manifest/base/envoy-filter.yaml
# Lua filter on the ingress gateway. Students can prove it with:
#   curl -sSI "https://$(oc get route todo-ingress -n todo-dev -o jsonpath='{.spec.host}')/"
# Expect headers: X-Workshop-Mesh: ossm  and  X-Todo-Filter: lua
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ingress-lua-headers
spec:
  workloadSelector:
    labels:
      istio: todo-ingressgateway
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.lua
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
          defaultSourceCode:
            inlineString: |
              function envoy_on_response(response_handle)
                response_handle:headers():add("x-workshop-mesh", "ossm")
                response_handle:headers():add("x-todo-filter", "lua")
              end
